# openclaw-newsroom

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROMPTS.md  README.md  REVIEW.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/evaluation/: clustering_eval_dataset_v1.md
newsroom/: CRON.md  README.md  __init__.py  _util.py  brave_news.py  charts.py  dedupe.py  eval_dataset.py  eval_metrics.py  event_gc.py  event_manager.py  gateway_client.py  gdelt_news.py  gemini_client.py  image_fetch.py  job_store.py  lang_hint.py  market_data.py  news_pool_backup.py  news_pool_db.py  prompt_policy.py  prompt_registry.json  result_repair.py  rss_news.py  runner.py  source_pack.py  story_index.py  subprocess_json.py
newsroom/evals/: clustering_eval_dataset_v1.jsonl  clustering_eval_dataset_v1.meta.json  clustering_eval_metrics_baseline_v1.json
newsroom/examples/: rss_feeds.example.yaml  run_job_example.json  story_job_example.json
newsroom/prompts/: blog_post_long_v1.md  facebook_post_v1.md  news_reporter_script_ai_v1.md  (+19 more)
scripts/: _cli.py  brave_news_pool.py  build_clustering_eval_dataset.py  eval_clustering_metrics.py  fix_pool_integrity.py  gdelt_pool_update.py  merge_events_oneoff.py  news_pool_dump_jsonl.py  news_pool_metrics.py  news_pool_restore_jsonl.py  news_pool_status.py  news_pool_update.py  newsroom_clustering_decisions.py  newsroom_daily_inputs.py  newsroom_hourly_inputs.py  newsroom_runner.py  newsroom_write_run_job.py  recluster_events.py  replay_clustering_eval_dataset.py  rss_pool_update.py
(+60 files in other folders)
